--- a/public_html/css/d3bit.css
+++ b/public_html/css/d3bit.css
@@ -7,14 +7,15 @@ body {
   background-color: #222;
   margin: 0;
   padding: 0;
-	overflow: auto;
-  overflow-y: scroll;
-  overflow-x: hidden;
+	overflow: hidden;
 }
 .d3bit-card {
 	height: 432px;
   width: 358px;
   border: 1px solid #333;
+	overflow: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 .d3bit-card h3 {
   font-size: 16px;
