Added user guide.

--- a/application/views/scripts/user/items.phtml
+++ b/application/views/scripts/user/items.phtml
@@ -29,10 +29,15 @@
             <td colspan='4'>
               <h2 style="margin-top: 0">No Items Found!</h2>
               <p>This panel updates with items that you've scanned and compared to your builds using the <a href="http://d3bit.com">D3Bit.com Tooltip Scanner</a>.</p>
-              <p>To get started, download the <a href="http://d3bit.com">D3Bit Client</a> and enter your D3Up.com username in the appropriate field. Each time you analyze an item against one of your builds, it will appear here.</p>
+              <p>To get started, download the <a href="http://d3bit.com">D3Bit Client</a> and enter your D3Up.com username in the appropriate field.</p>
             </td>
           </tr>
         <? endif ?>
+        <tr>
+          <td colspan='4'>
+            <p>Check out the <a href="/guide/94/d3bit-user-guide">D3Bit.com Client User Guide</a> right here on D3Up.com!</p>
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
