Updated system message

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0'>Welcome to D3Up.com version 1.0!</h3>
-	Take a moment to <a href="/update/32">read the patch</a> notes or <a href="http://www.youtube.com/watch?v=OaRts-nmOE8">watch the video</a> where I show all the new features!
+	<h3 style='margin: 0'>D3Bit.com + D3Up.com = IN-GAME Item Compares!</h3>
+  We are proud to announce the integration of the D3Bit client and D3Up Compares! <a href="http://www.reddit.com/r/Diablo/comments/10mdp1/d3bitcom_d3upcom_ingame_item_comparisons/">Check out the announcement here</a>.
 	This was an absolutely major task, so please report anything strange to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 </div>
