LT IE9 warning.

--- a/application/layouts/scripts/d3bit.phtml
+++ b/application/layouts/scripts/d3bit.phtml
@@ -16,6 +16,11 @@
 	?>
 </head>
 <body>
+  <!--[if lt IE 9]>
+	<div id="warning-browser">
+		<strong>WARNING</strong>: The version of Internet Explorer your computer has doesn't work with the Compare feature. Please Upgrade to IE9/10 using Windows Update to use this feature.
+	</div>
+  <![endif]-->
   <div class="d3bit-card">
     <div class="logo"><img src="http://d3up.com/images/logo.jpg"></div>
     <h3><a href="#" onclick="window.external.OpenLink('http://d3up.com')">D3Up.com</a> Item Comparision</h3>
