--- a/application/layouts/scripts/d3bit.phtml
+++ b/application/layouts/scripts/d3bit.phtml
@@ -39,14 +39,16 @@
     $url = '?';
     foreach($this->params as $key => $param) {
       if($key == 'battletag') {
-        $param = urlencode($param);
+        $param = $param;
       }
       $url .= "&".$key."=".$param;
     } 
+    $url = urlencode($url);
     ?>
     <div style='text-align: center'>
+      <p><a onclick="window.external.OpenLink('http://d3up.com/ajax/compare/<?= $url ?>')">Open Compare in Browser</a></p>
       <p>Having Problems with this Compare?</p>
-      <p>Report it and include <a href='http://d3up.com/ajax/compare/<?= $url ?>'>this link</a> so we can see it!</p>
+      <p>Report it and include <a onclick="window.external.OpenLink('http://d3up.com/ajax/compare/<?= $url ?>')">this link</a></p>
     </div>
   </div>
   <script type="text/javascript">
