--- a/application/layouts/scripts/d3bit.phtml
+++ b/application/layouts/scripts/d3bit.phtml
@@ -45,7 +45,7 @@
     } 
     ?>
     <div style='text-align: center'>
-      <p><a href="#" onclick="window.external.OpenLink('http://d3up.com/ajax/compare/<?= $url ?>')">Open Compare in Browser</p>
+      <p><a href="#" onclick="window.external.OpenLink('http://d3up.com/ajax/compare/<?= $url ?>')">Open Compare in Browser</a></p>
       <p>Having Problems with this Compare?</p>
       <p>Report it and include <a onclick="window.external.OpenLink('http://d3up.com/ajax/compare/<?= $url ?>')">this link</a></p>
     </div>
