Fix some indexing on items.

--- a/application/views/scripts/item/index.phtml
+++ b/application/views/scripts/item/index.phtml
@@ -83,7 +83,7 @@
 			</select>
 		</div>
 		<h2 class="table-header">Item Search</h2>
-		<table id="recent-items" class="d3up-table">
+		<table id="my-items" class="d3up-table">
 			<thead>
 				<tr>
 					<td colspan="100" class="sorting">
