Fixed refresh message.

--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -16,7 +16,7 @@
 	  </div>
 	  <? endif ?>
 	  <div class="notifications">
-      With the new release, if something isn't working on this build: Hold down SHIFT and Refresh, if stuff is still broken, <a href="mailto:aaron.cox@greymass.com">email me</a>.
+      With the new release, if something isn't working on this build: Hold down CTRL and Refresh, if stuff is still broken, <a href="mailto:aaron.cox@greymass.com">email me</a>.
 	  </div>
     <ul id="tabs">
       <li class='divider'>Build</li>
