Manual Save button.

--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -33,6 +33,7 @@
       <? endif ?>
       <? if($this->myBuild): ?>
       <li><a class="button" href="/user/items">My Items</a></li>
+      <li><a class='saveStats button' href="#">Save Stats to DB</a></li>
       <? endif ?>
       <!-- <li><a data-tab="#suggestions" class="button">Suggestions</a></li>
       <li><a data-tab="#share" class="button">Share</a></li> -->
