Updated menu bar

--- a/application/layouts/scripts/_menu.phtml
+++ b/application/layouts/scripts/_menu.phtml
@@ -152,6 +152,9 @@
           </div>
         </div>
       </li> -->
+      <li class='social'>
+        <a href="http://twitter.com/d3up"><img src='/images/t_logo.png'/></a>
+      </li>
 			<li class='social'>
 			  <a href="http://facebook.com/d3upgrade"><img src='/images/f_logo.png'/></a>
 			</li>
