Few tweaks for SEO

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<?= $this->headTitle("Diablo 3 DPS/EHP Calculator")->setSeparator(' | '); ?>
+	<?= $this->headTitle("Diablo 3 DPS & EHP Calculator")->setSeparator(' | '); ?>
 	<meta name="description" content="Calculate your Diablo 3 Characters DPS/EHP from your gear" />
 	<meta name="keywords" content="diablo 3, dps, ehp, gear, calculator, effective health pool, tool, compare" />
 
@@ -45,7 +45,7 @@
 			</div>
 			<div id="header-content" class="inline-flow">
 				<h2 class="table-header">
-				  Diablo 3 EHP/DPS/Gear Calculator and Guides
+				  Diablo 3 DPS & EHP Calculator
 				  <? if($this->profile): ?>
 			      <span class='user-bar'><a href="/user/edit"><?= $this->profile->username ?></a> | <a href="/user/logout">Logout</a></span>
 				  <? else: ?>
@@ -62,7 +62,7 @@
 			</div>
 		</div>
 		<div id="footer">
-			<h4>D3Up.com - Diablo 3 DPS / EHP / Gear Calculator and Tools</h4>
+			<h4>D3Up.com - Diablo 3 DPS & EHP Calculator</h4>
 			<p>Created and maintained by <a href="http://greymass.com">Aaron Cox</a></p>
 			<p>Want to support the site? Feel free to donate a couple bucks!</p>
 			<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
