--- a/application/views/scripts/index/_sidebar.phtml
+++ b/application/views/scripts/index/_sidebar.phtml
@@ -9,6 +9,8 @@
 	</div>
 	<div class='page'>
 		<h3>What is D3Up.com?</h3>
+		<p>To put it as simple as possible, it's a...</p>
+		<h1 style='font-size: 1em'>Diablo 3 DPS & EHP Calculator</h1>
 		<p>D3Up.com is a web application specifically designed to help you optimize your Diablo 3 character builds by calculating your stats and simulating gear changes in real time as you tweak anything and everything.</p>
 		<p>For a walk through on how to create your build, check out the <a href="http://www.youtube.com/watch?v=OaRts-nmOE8">D3Up.com Introduction (16m)</a> video on YouTube!</p>
 	</div>
