--- a/application/views/scripts/index/widgets/video-builds.phtml
+++ b/application/views/scripts/index/widgets/video-builds.phtml
@@ -1,4 +1,6 @@
-<div class="page">
+<div class='video-intro page'>
   <h5 style='color: #B18135; margin: 0'>Using D3Up.com</h5>
-  <iframe width="562" height="315" src="http://www.youtube.com/embed/OaRts-nmOE8?wmode=transparent" frameborder="0" allowfullscreen></iframe>
+  <div style='text-align: center'>
+    <iframe width="562" height="315" src="http://www.youtube.com/embed/OaRts-nmOE8?wmode=transparent" frameborder="0" allowfullscreen></iframe>
+  </div>
 </div>
