Fix to guides widget.

--- a/application/views/scripts/index/widgets/guides-featured.phtml
+++ b/application/views/scripts/index/widgets/guides-featured.phtml
@@ -11,5 +11,5 @@
   	</div>
   </div>
   <? endforeach ?>
-  <a class='button' href='guides' style="margin: 10px 30px">View All Guides</a>
+  <a class='button' href='/guide' style="margin: 10px 30px">View All Guides</a>
 </div>
