System Message Update.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,4 @@
 <div id="sys-message">
-	<h3 style='margin: 0'>D3Bit.com + D3Up.com = IN-GAME Item Compares!</h3>
-  We are proud to announce the integration of the D3Bit client and D3Up Compares! <a href="http://www.reddit.com/r/Diablo/comments/10mdp1/d3bitcom_d3upcom_ingame_item_comparisons/">Check out the announcement here</a>.
-	This was an absolutely major task, so please report anything strange to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
+	<h3 style='margin: 0'><a href='/update/33'>Status Update: Taking it easy and preparing for 1.0.5</a></h3>
+	Please report any bugs via the feedback tab or email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
