Refactored game data

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -24,7 +24,7 @@
 			->appendFile("/js/site.js")
 			->appendFile("/js/jquery.diff.js")
 			->appendFile("/js/jquery.color.js")
-			->appendFile("/js/skills.js")
+			->appendFile("/js/gamedata.js")
 			->appendFile("/js/peity.js")
 			->appendFile("/js/tooltip.js")
 			->appendFile("/js/unmin/itembuilder.js")
