--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -18,9 +18,9 @@
   $(function() {
     $("td.skills img").each(function() {
   		if($(this).data("id") && $(this).data("id") != "undefined") {
-  			var skill = activeSkills[$(this).attr("data-class")][$(this).attr("data-id")];
+  			var skill = d3up.gameData.actives[$(this).attr("data-class")][$(this).attr("data-id")];
   			if(!skill) {
-  				skill = passives[$(this).attr("data-class")][$(this).attr("data-id")];
+  				skill = d3up.gameData.passives[$(this).attr("data-class")][$(this).attr("data-id")];
   				if(skill) {
   					skill.name = $(this).attr("data-id").replace(/\-/g," ").capitalize();					  
   				}
