More tweaks for 1.0.5 launch

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,4 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0'><a href='/update/33'>Status Update: Taking it easy and preparing for 1.0.5</a></h3>
+	<h3 style='margin: 0'><a href='/update/34'>1.0.5 Update Live - Skill Changes & Elemental Damage</a></h3>
+	This update probably led to some inaccuracies in DPS Calculations. If your DPS is off by more than 1%, please email me. Make sure to include <u>a link to your D3Up.com Build</u> and <u>a screenshot of your in-game detailed stats</u>.
 	Please report any bugs via the feedback tab or email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
