--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -209,7 +209,7 @@ ul.simulate-item input,
 	width: 728px;
 	text-align: center;
 	font-size: 14px;
-	padding: 15px;
+	padding: 5px 15px;
 	margin: 2px auto;
 /*	border-bottom: 1px solid #777;*/
 }
