--- a/application/layouts/scripts/d3bit.phtml
+++ b/application/layouts/scripts/d3bit.phtml
@@ -9,7 +9,7 @@
 			->appendFile("/js/json3.js")
 			->appendFile("/js/d3up.js")
 			->appendFile("/js/underscore.js")
-			->appendFile("/js/skills.js")
+			->appendFile("/js/gamedata.js")
 			->appendFile("/js/unmin/buildv2.js")
 			->appendFile("/js/unmin/calcv2.js")
 			->appendFile("/js/unmin/itembuilder.js")
