--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0'><a href='/update/34'>1.0.5 Update Live - Skill Changes & Elemental Damage</a></h3>
-	This update probably led to some inaccuracies in DPS Calculations. If your DPS is off by more than 1%, please email me. Make sure to include <u>a link to your D3Up.com Build</u> and <u>a screenshot of your in-game detailed stats</u>.
+	<h3 style='margin: 0'>Notice: Armory Profiles updating Irregularly</h3>
+	Just wanted to let you know there's some strange things happening on the armory since 1.0.5. Hellfire rings don't show on characters and character's are updating really slowly. This isn't an issue with D3Up, it's an armory issue!
 	Please report any bugs via the feedback tab or email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
