--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,5 @@
 <div id="sys-message">
-	<h3 style='margin: 0'>Notice: Armory Profiles updating Irregularly</h3>
-	Just wanted to let you know there's some strange things happening on the armory since 1.0.5. Hellfire rings don't show on characters and character's are updating really slowly. This isn't an issue with D3Up, it's an armory issue!
+	<h3 style='margin: 0'>Notice: Hellfire Rings won't sync</h3>
+	Just a heads up, Hellfire rings now show on your D3 Armory profile, but they don't show up in the D3 Armory API that D3Up uses. Until Blizzard gets them showing in the API, you'll have to create your rings manually on builds.
 	Please report any bugs via the feedback tab or email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
