Few things to speed things up.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,5 +1,6 @@
 <div id="sys-message">
-	<h3 style='margin: 0; color: #0f0'>Survey: Help shape the future of D3Up.com!</h3>
-	I've created <a href="http://survey.greymass.com/index.php/survey/index/sid/351896/lang/en">a 2 question survey</a>, short and simple, and want to get feedback from all of you about D3Up! Also <span style="color: #f00">Hellfire Rings still will not sync</span>, it's a problem on Blizzard's end, not mine.
+	<h3 style='margin: 0;'>Server Issues / Survey</h3>
+	The site's experiencing some growing pains right now, if a page doesn't load, give it a second and try again. I'll try to have everything running smoothly again this week.
+	Take a moment to fill out <a href="http://survey.greymass.com/index.php/survey/index/sid/351896/lang/en">D3Up's quick 2 question survey</a>!
 	Please report any bugs via the feedback tab or email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
