--- a/application/views/scripts/index/_sidebar.phtml
+++ b/application/views/scripts/index/_sidebar.phtml
@@ -37,7 +37,7 @@
 			</form>
 		</div>
 	</div>
-	<div class='page'>
+	<!-- <div class='page'>
 		<h3>Statistics</h3>
 		<ul>
 			<li><?= $this->prettyStat($this->counts['guides'], 1) ?> <a href="/guide">Guides</a></li>
@@ -45,5 +45,5 @@
 			<li><?= $this->prettyStat($this->counts['builds'], 1) ?> <a href="/build/">Character Builds</a></li>
 			<li><?= $this->prettyStat($this->counts['sales'], 1) ?> <a href="/item/sales-history">Sales</a></li>
 		</ul>
-  </div>
+  </div> -->
 </div>
