--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -5,14 +5,16 @@
   <?= $this->render("./index/widgets/video-builds.phtml") ?>
   <?= $this->render("./index/widgets/guides-featured.phtml") ?>
   <?= $this->render("/index/widgets/guides.phtml")?>
-  <table id="recent-builds" class="d3up-table">
+  <!-- <table id="recent-builds" class="d3up-table">
     <thead>
       <tr>
         <td colspan="10"><h5 style="color: #B18135">Recent Builds</h5></td>
       </tr>
     </thead>
-    <?= $this->render("./index/widgets/recent-builds.phtml")?>
-  </table>
+    <? 
+			//$this->render("./index/widgets/recent-builds.phtml")
+		?>
+  </table> -->
 </div>
 <script type="text/javascript" charset="utf-8">
   $(function() {
