Fix to DPS Math calculations and added EHP w/ Block + Dodge.

--- a/application/views/scripts/record/item.phtml
+++ b/application/views/scripts/record/item.phtml
@@ -44,7 +44,7 @@
 			<li><a href="#tab-share">Share this Item</a></li>
 		</ul>
 		<div id="tab-similar"> 
-			<h3 style="color: #f00; text-align: center">Current Disabled</h3>
+			<h3 style="color: #f00; text-align: center">Currently Disabled</h3>
 			<div class='ui-state-disabled'>
 				<h3 class="table-header" style='margin-bottom: 20px'>Search Attributes</h3>
 				<select data-placeholder="Which attributes?" id="similar-attributes" multiple="multiple" style="width: 390px">
