--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -34,6 +34,7 @@
       <? if($this->myBuild): ?>
       <li><a class="button" href="/user/items">My Items</a></li>
       <li><a class='saveStats button' href="#">Save Stats to DB</a></li>
+      <li><a data-tab="#json" class='button'>JSON Data</a></li>
       <? endif ?>
       <li><a data-tab="#dps-math" class='button'>DPS Calculations</a></li>
       <!-- <li><a data-tab="#suggestions" class="button">Suggestions</a></li>
@@ -49,6 +50,7 @@
       <? endif ?>
       <? if(!$this->record->_createdBy->id || ($profile && $profile->id === $this->record->_createdBy->id)): ?>
       <div id="sync"><?= $this->render("./record/build/sync.phtml") ?></div>
+      <div id="json"><?= $this->render("./record/build/json.phtml") ?></div>
       <? endif ?>
       <div id="dps-math"><?= $this->render("./record/build/math-dps.phtml") ?></div>
       <!-- <div id="suggestions"><?= $this->render("./record/build/suggestions.phtml") ?></div>
