Letting people know i'll be restarting services.

--- a/application/layouts/scripts/_system-message.phtml
+++ b/application/layouts/scripts/_system-message.phtml
@@ -1,6 +1,6 @@
 <div id="sys-message">
-	<h3 style='margin: 0;'>Server Issues / Survey</h3>
-	The site's experiencing some growing pains right now, if a page doesn't load, give it a second and try again. I'll try to have everything running smoothly again this week.
-	Take a moment to fill out <a href="http://survey.greymass.com/index.php/survey/index/sid/351896/lang/en">D3Up's quick 2 question survey</a>!
+	<h3 style='margin: 0; color: #d00'>Server Updates - Restarting Services</h3>
+	Afternoon of Nov 8th - I'll be doing some testing and updates on the server itself. 
+	During this time, I'll be occasionally restarting some of the applications that run D3Up, so if something doesn't load, give it a second and try again.
 	Please report any bugs via the feedback tab or email me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 </div>
